--- a/style.css
+++ b/style.css
@@ -199,6 +199,16 @@ html, body {
   text-transform: uppercase;
   letter-spacing: 2px;
   color: #000000;
+  margin-bottom: 5px;
+}
+
+.wedding-day {
+  font-family: 'Playfair Display', serif;
+  font-size: 12px;
+  font-weight: 300;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  color: #666666;
   margin-bottom: 10px;
 }
 
@@ -1683,6 +1693,11 @@ html, body {
   font-size: 1.1em;
   margin-left: 2px;
   vertical-align: middle;
+}
+
+.calendar-mini td.other-month {
+  color: #ccc;
+  font-weight: 300;
 }
 @media (max-width: 500px) {
   .calendar-table {
